databases/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-react-service
spec:
  selector:
    app: mysql-react
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
